--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>rawrdoge</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="dist/style.css">
+
+
+
+</head>
+
+<body>
+  <main>
+    <section class="glass">
+      <img class="logo" src="img/logov2.png" />
+
+
+
+      <h2>rawrdoge</h2>
+      <div class="links">
+        <div class="link">
+          <a href=https://www.snapchat.com/add/jcv103 style="text-decoration: none;">
+          <img class="contents" src="img/sclogo.png" />
+          <h3>Snapchat</h3>
+        </div>
+        <div class="link">
+          <a href=https:/https://twitter.com/rawrdoge/ style="text-decoration: none;">
+          <img class="contents" src="img/twlogo.png" />
+          <h3>Twitter</h3>
+        </div>
+      </div>
+    </section>
+  </main>
+  <div class="rectangle1"></div>
+  <div class="rectangle2"></div>
+
+
+
+  </div>
+
+</body>
+
+</html>
