--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3>Snapchat</h3>
         </div>
         <div class="link">
-          <a href=https:/https://twitter.com/rawrdoge/ style="text-decoration: none;">
+          <a href=https://twitter.com/rawrdoge/ style="text-decoration: none;">
             <img class="contents" src="img/twlogo.png" />
             <h3>Twitter</h3>
         </div>
