--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>rawrdoge</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link rel="stylesheet" href="dist/style.css">
+  <link rel= "shortcut icon" type="image/png" href="img/favicon.png">
 
 
 
@@ -15,7 +16,7 @@
 <body>
   <main>
     <section class="glass">
-      <img class="logo" src="img/logov2.png" />
+      <img class="logo" src="img/favicon.png" />
 
 
 
